# straindb-rag

./: .gitignore  01_extract.ipynb  README.md  pyproject.toml  requirements.txt  st_app.py
.streamlit/: config.toml
chroma/491585cb-f07f-4ed0-93b7-5f040d6b7d0d/: index_metadata.pickle
